--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,7 @@ table {
 .ui-draggable, .ui-droppable {
 	background-position: top;
 }
-a {
-	color:blue !important;
-}
+
 p.small {
    line-height: 
 }
@@ -55,4 +53,115 @@ a.ui-button:active,
 
 .projectUsername {
   color: black;
+}
+
+.home {
+	float:right;
+	height: 20px;
+	width:20px;
+	padding-right: 1%;
+	padding-top: 1%;
+}
+
+.panel-group {
+  margin: 10px;
+  background-color: #8fc202;
+  border-top:6px solid #8fc202;
+  border-bottom:6px solid #8fc202;
+  border-radius: 6px;
+}
+
+.panel-default>.panel-heading {
+  background-color: #8fc202;
+  border-color: #8fc202;
+}
+
+.plus {
+  float:right;
+  text-shadow: 0px 0px 1px #404040;
+}
+
+.panel-default {
+  border-color: #8fc202;
+}
+
+.panel-title {
+  color: #ffffff;
+}
+
+.panel>.list-group .list-group-item, .panel>.panel-collapse>.list-group .list-group-item {
+  border-width: 0px;
+}
+
+a:hover {
+  color: #8fc202;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+a {
+  color: #8fc202;
+  font-size: 12px;
+}
+
+.panel-text {
+  color: white;
+  font-weight: bold;
+  text-shadow: 0px 0px 1px #404040;
+  font-size: 18px;
+}
+
+.panel-text:hover {
+  color: white;
+  font-weight: bold;
+  text-shadow: 0px 0px 1px #404040;
+  font-size: 18px;
+}
+
+h3 {
+  color: #555;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+body {
+  color: #555;
+  font-size: 12px;
+}
+
+.btn {
+  margin: 5px;
+}
+
+/* For Tutorials */
+
+.tutorials {
+  background-color: #cbdca9;
+  border-width: 0px;
+  margin: 10px;
+}
+
+.tutorials:hover {
+  cursor: pointer;
+  background-color: #E8F2D4;
+}
+
+.tut-nav {
+  background-color: #f3f3f3;
+}
+
+.body {
+  padding-top: 70px;
+}
+
+.tut-navig {
+  background-color: #f3f3f3;
+  border-top:6px solid #f3f3f3;
+  border-bottom:6px solid #f3f3f3;
+  border-radius: 6px;
+}
+
+.tut-nav>.panel-heading{
+  background-color: #f3f3f3;
+  border-color: #f3f3f3;
 }
